# automaskell

./: .gitignore  CHANGELOG.md  automaskell.cabal
doc/html/automaskell/: Automaton.html  DotShow.html  Helpers.html  Set.html  State.html  Transition.html  automaskell.haddock  doc-index.html  index.html
lib/: Automaton.hs  DotShow.hs  Helpers.hs  Set.hs  State.hs  TestConstants.hs  Transition.hs
test/: AutomaTest.hs
