cabal-version:       2.4

name:                automaskell
version:             0.1.0.0
synopsis:            Finite state automata, but it's actually good code
license:             MIT
license-file:        LICENSE
author:              Speykious
maintainer:          speykious@gmail.com
copyright:           Speykious
category:            Math

library
  exposed-modules:     TestConstants
                     , Automaton
                     , DotShow
                     , Helpers
                     , Transition
                     , State
  build-depends:       base ^>=4.14.1.0
                     , containers
                     , process
  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite automaskell-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             AutomaTest.hs
  build-depends:       base ^>=4.14.1.0
                     , automaskell
                     , containers
